<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/genymotion"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_people_black_24dp"
            android:hint="@string/enter_user_name"
            android:textColor="#FFFFFF"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/enter_email"
            android:textColor="#FFFFFF"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:hint="@string/enter_password"
            android:textColor="#FFFFFF"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:hint="@string/confirm_password"
            android:textColor="#FFFFFF"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:hint="@string/phone_number"
            android:textColor="#FFFFFF"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffff"
            android:textSize="15sp"
            android:layout_marginTop="35dp" />
    </LinearLayout>


</ScrollView>